// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTableRow customize 1`] = `
<table>
  <tbody>
    <tr
      class="info align-middle active bazinga"
    >
      <th>
        Test
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`loads and displays CxTableRow component 1`] = `
<table>
  <tbody>
    <tr />
  </tbody>
</table>
`;
